# skate

./: Cargo.toml  LICENSE  README.md  package.json  skate.json  tsconfig.json
example/: index.html  script.js  skate.json  style.css
src/: main.rs  main.tsx  script.js  script.txt  style.css
