[package]
name = "skating"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version =  "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs"] }
